<resources>
    <string name="app_name">TranslationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="translation_title">Translate your words Here!</string>
    <string name="language_selection_error">No language selected!</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_translation">Translation Page</string>
    <string name="menu_createAccount">Create Account</string>
    <string name="menu_login">Login</string>
    <string name="menu_googleMaps">Google Maps</string>
    <string name="menu_forgotPassword">Forgot Password</string>
    <string name="menu_chat">Chat</string>
    <string name="no_connection">No Internet Connection! Cannot be Translated!</string>
    <string name="loading">Loading…</string>
    <string name="password">Password</string>
    <string name="app_title">Buddy Translate</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_registered"><u>Don\'t have an account? Sign Up Here!</u></string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="enter_phrase">Enter Phrase</string>
</resources>