<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_translation"
            android:icon="@drawable/ic_baseline_translate_24"
            android:title="@string/menu_translation" />

        <item
            android:id="@+id/nav_createAccount"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/menu_createAccount" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />

    </group>
</menu>