<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.translationapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_createAccount"
            app:destination="@id/nav_createAccount" />
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_home_to_nav_translation"
            app:destination="@id/nav_translation" />
    </fragment>

    <fragment
        android:id="@+id/nav_createAccount"
        android:name="com.example.translationapp.ui.createAccount.CreateAccountFragment"
        android:label="@string/menu_createAccount"
        tools:layout="@layout/fragment_create_account" >
        <action
            android:id="@+id/action_nav_createAccount_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/nav_createAccount_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.translationapp.ui.favorites.FavoritesFragments"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_forgot_password"
        android:name="com.example.translationapp.ui.forgotPassword.ForgotPassword"
        android:label="@string/menu_forgotPassword"
        tools:layout="@layout/fragment_forgot_password" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.translationapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_translation"
            app:destination="@id/nav_translation" />
        <action
            android:id="@+id/action_nav_login_to_nav_createAccount"
            app:destination="@id/nav_createAccount" />
        <action
            android:id="@+id/action_nav_login_to_nav_forgot_password"
            app:destination="@id/nav_forgot_password" />
    </fragment>
    <fragment
        android:id="@+id/nav_translation"
        android:name="com.example.translationapp.ui.translation.TranslationFragment"
        android:label="@string/menu_translation"
        tools:layout="@layout/fragment_translation" >

        <action
            android:id="@+id/action_nav_translation_to_nav_favorites"
            app:destination="@id/nav_favorites" />
    </fragment>

</navigation>